--- a/vet/templates/vet/home.html
+++ b/vet/templates/vet/home.html
@@ -1,6 +1,6 @@
 {% extends 'vet/base.html' %}
 {% block title %}ePetCare - Veterinarian Portal{% endblock %}
-{% block content %}
+{% block public_content %}
 <!-- Hero Section -->
 <div class="hero">
     <div class="hero-content">
