--- a/vet/templates/vet/register.html
+++ b/vet/templates/vet/register.html
@@ -1,6 +1,6 @@
 {% extends 'vet/base.html' %}
 {% block title %}Register - Veterinarian Portal{% endblock %}
-{% block content %}
+{% block public_content %}
 <div class="toolbar">
   <h2>Create Veterinarian Account</h2>
   <a class="btn" href="{% url 'vet:login' %}">Login</a>
