--- a/vet/templates/vet/login.html
+++ b/vet/templates/vet/login.html
@@ -1,6 +1,6 @@
 {% extends 'vet/base.html' %}
 {% block title %}Login - Veterinarian Portal{% endblock %}
-{% block content %}
+{% block public_content %}
 <div class="toolbar">
   <h2>Login to Veterinarian Portal</h2>
   <a class="btn" href="{% url 'vet:register' %}">Register</a>
